  and check for non-empty type buckets.
- Result fetchColumn renamed; from fetchField.
- Result fetchAllArrays(), fetchAllObjects() instead of fetchAll(), to secure
  IDE recognition of list types (array[], object[]) and far simpler method
  parameter signature.
- Result fetchObject(), fetchAllObjects() check that class actually exists.

SimpleComplex/Database 1.x, 2018-08-08
--------------------------------------
- Non-MsSql simple query always checks argument types, and object __toString().
- Query execution counter use natural value (first execution is 1), and counter
  renamed to nExecution; from execution.
- Safeguard against unintended reuse of non-prepared statement.
- MariaDb ability to call stored procedure via prepared statement confirmed,
  including ability to handle stored procedure producing more result sets.
- Allow executing simple query more times, if option reusable and intermediate
  call to parameters().
- DbResult insertId() simplified, cleaned-up and tested.

SimpleComplex/Database 1.x, 2018-08-07
--------------------------------------
- Moved FETCH_* constants to DbResult, from class Database.
- Moved error-as-string constants to DbError, from class Database.
- Removed obsolete class Database.
- Query validate_params bitmask: prepare, execute, failure etc.
- Query validate non-stringable object for MariaDb; mysqli_stmt::prepare exits
  (no error) when stumbling upon such.

SimpleComplex/Database 1.x, 2018-08-06
--------------------------------------
- MsSql query validate native out-parameters.
- MsSql query parameter validation check for int out of bigint range.
- Query option validate_params renamed; from validate_arguments.
- Query validate parameters on query execution failure; validate_params:1.

SimpleComplex/Database 1.x, 2018-08-05
--------------------------------------
- Query argument object stringification: MySQLi attempts to stringify even when
  no __toString() method, whereas Sqlsrv only stringifies \DateTime.